feat: update build process and add fix-imports script
- Modified the build script in package.json to include tsc-alias and a new script for fixing imports.
- Added a new script (fix-imports.js) to append .js extensions to relative imports in the dist directory.
- Removed unused ContractClient, crowdfunding ABI, and related listener files to clean up the codebase.
- Updated tsconfig.json to change module resolution to Bundler and added allowImportingTsExtensions option.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,20 @@
 version: "3.8"
 
 services:
-  # Redis Cache
-  redis:
-    image: redis:alpine
-    container_name: crowdfunding-redis
-    restart: unless-stopped
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "6379:6379"
-    command: redis-server --requirepass redis123 --appendonly yes
-    volumes:
-      - redis_data:/data
+      - "8888:8888"
+    env_file:
+      - .env
+    environment:
+      - PORT=8888
+      - NODE_ENV=production
+    restart: unless-stopped
     networks:
       - crowdfunding-network
-
-  # RedisInsight (Official Redis GUI - Modern & Beautiful)
-  redisinsight:
-    image: redis/redisinsight:latest
-    container_name: crowdfunding-redisinsight
-    restart: unless-stopped
-    ports:
-      - "5540:5540"
-    volumes:
-      - redisinsight_data:/data
-    depends_on:
-      - redis
-    networks:
-      - crowdfunding-network
-
-volumes:
-  redis_data:
-    driver: local
-  redisinsight_data:
-    driver: local
 
 networks:
   crowdfunding-network:
