--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "ES2020",
         "module": "ESNext",
-        "moduleResolution": "Node",
+        "moduleResolution": "Bundler",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
@@ -15,7 +15,8 @@
             "@/*": [
                 "src/*"
             ]
-        }
+        },
+        "allowImportingTsExtensions": false
     },
     "include": [
         "src"
