--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "tsx watch src/main.ts",
     "build": "tsc && tsc-alias && node scripts/fix-imports.js",
     "start": "node dist/main.js",
+    "seed:vocabulary": "tsx src/scripts/seed-vocabulary.ts",
     "format": "prettier --write \"src/**/*.{ts,js,json}\"",
     "format:check": "prettier --check \"src/**/*.{ts,js,json}\"",
     "lint": "prettier --check \"src/**/*.{ts,js,json}\""
