--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/main.ts",
-    "build": "tsc && tsc-alias && node scripts/fix-imports.js",
+    "build": "tsc && tsc-alias && node src/scripts/fix-imports.js",
     "start": "node dist/main.js",
     "seed:vocabulary": "tsx src/scripts/seed-vocabulary.ts",
     "format": "prettier --write \"src/**/*.{ts,js,json}\"",
