--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.940.0",
     "@aws-sdk/s3-request-presigner": "^3.940.0",
+    "@google/genai": "^1.30.0",
     "@web3-storage/w3up-client": "^17.3.0",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
